# version1

./: .gitignore  Makefile  README.md  config.yaml  go.mod  go.sum
.defra/: config.yaml
cli/: cli.go  index.go  root.go  view.go
cmd/block_poster/: main.go
cmd/indexer/: main.go
cmd/shinzo/: main.go
cmd/view_creator/: main.go
config/: config.go  config.yaml  config_test.go
config/pipelines/: block.lens  block.yaml  event.lens  event.yaml  log.lens  log.yaml  transaction.lens  transaction.yaml
examples/filter_view_example/: query.graphql  sdl.graphql  transform.json
examples/test_decode/: query.graphql  sdl.graphql  transform.json
integration/: block_query_test.go  event_query_test.go  integration_test.go  logs_query_test.go  transaction_query_test.go
lenses/: .gitignore  Makefile
lenses/rust_wasm32_combine_view/: Cargo.toml
lenses/rust_wasm32_decode_topics/: Cargo.toml
lenses/rust_wasm32_decode_topics/src/: lib.rs  lib_test.rs
lenses/rust_wasm32_reduce_txs/: Cargo.toml
lenses/rust_wasm32_smartcontract/: Cargo.toml
lenses/rust_wasm32_static/: Cargo.toml
pkg/defra/: block_handler.go  block_handler_test.go  view_handler.go
pkg/indexer/: indexer.go
pkg/lens/: transform.go
pkg/logger/: slog.go
pkg/rpc/: alchemy.go  ethereum_client.go  grpc_client.go  grpc_client_test.go  rpc_negative_test.go
pkg/types/: conversion.go  conversion_test.go  types.go
queries/: blocks.graphql
schema/: schema.graphql  schema.sdl
scripts/: apply_schema.sh  bootstrap.sh  cleanup_db_&_apply_schema.sh  init_schema.sh  test_integration.sh
(+13 files in other folders)
