[package]
name = "rust_wasm32_decode_topics"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
lens_sdk = "^0.5"
ethabi = "18.0"
hex = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
ethereum-types = "0.14.1"